@@ -16,6 +16,9 @@
             <p>Grab the latest distribution:</p>
             <ul>
                 <li>
+                    <a href="https://github.com/mikey-austin/greyd/releases/download/v0.11.4/greyd-0.11.4.tar.gz">greyd-0.11.4.tar.gz</a> - 2020-01-23
+                </li>
+                <li>
                     <a href="https://github.com/mikey-austin/greyd/releases/download/v0.11.3/greyd-0.11.3.tar.gz">greyd-0.11.3.tar.gz</a> - 2019-12-30
                 </li>
             </ul>
@@ -74,7 +77,7 @@ Is this ok [y/N]: y</code></div>
             </p>
 
             <div class="highlight">
-<code>$ tar xzf greyd-0.11.3.tar.gz && cd greyd-0.11.3
+<code>$ tar xzf greyd-0.11.4.tar.gz && cd greyd-0.11.4
 $ ./configure --with-sqlite --with-netfilter
 $ make
 $ sudo make install</code>
